# rowfind

./: README.md  README.txt  pyproject.toml  rowfind.py
.github/workflows/: python-publish.yml
